# copier-python-project

./: .gitignore  README.md  copier.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml  conventional-commit-pr-name.yml  release.yml  test.yml
skeleton/: .env.example.jinja  Dockerfile  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  docker-entrypoint.sh.jinja  justfile.jinja  pyproject.toml.jinja  {% if docker %}Dockerfile{% endif %}.jinja  {% if docker %}docker-compose.override.yml.example{% endif %}.jinja  {% if docker %}docker-compose.yml{% endif %}.jinja  {% if docker %}docker-entrypoint.sh{% endif %}.jinja  {% if is_docker_project %}Dockerfile{% endif %}.jinja  {% if is_lambda_project %}lambda_function.py{% endif %}.jinja
skeleton/.copier/: {{_copier_conf.answers_file}}.jinja
skeleton/.github/workflows/: ci.yml.jinja  {% if automatic_gh_release %}release.yml{% endif %}
skeleton/tests/: {% if is_lambda_project %}conftest.py{% endif %}.jinja  {% if is_lambda_project %}test_lambda_function.py{% endif %}.jinja
skeleton/{{ project_name_snake_case }}/: {% if is_lambda_project %}lambda_function.py{% endif %}.jinja
test_answers/: docker.yml  lambda.yml  plain.yml
tests/: conftest.py  helpers.py  parsers.py  test_generation.py  test_syntax.py
