[project]
name = "copier-python-project"
version = "0.1.0"
description = "Template for empty dockerized python project."
authors = [{ name = "Piotr Karaś", email = "pepe500p@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.7.1,<10",
    "pytest>=8.4.1,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = "tests"
