[project]
name = "copier-python-project"
version = "0.0.0"  # This is a placeholder, version is determined by git tag during CI/CD
description = "Template for python project."
authors = [{ name = "Piotr Karaś", email = "pepe500p@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.11.3,<10",
    "mypy>=1.19.1,<2",
    "pytest>=9.0.2,<10",
    "ruff>=0.14.14,<0.15",
    "types-pyyaml>=6.0.12.20250915,<7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
#  See https://docs.astral.sh/ruff/rules/ for more information.
select = [
    "PT",   # flake8-pytest-style
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "I",    # isort
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "N",    # pep8-naming
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # pyflakes
    ]
ignore = ["S101", "A003", "B904", "N818", "COM812"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.isort]
order-by-type = false

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = "misc"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = "tests"
